--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,6 +51,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Assets/Scripts/PlayerMovement.cs" />
+    <Compile Include="Assets/Scripts/EnemyMovement.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets/Sprites/README - License details.txt" />
