--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Assets/Scripts/LevelExit.cs" />
     <Compile Include="Assets/Scripts/GameSession.cs" />
     <Compile Include="Assets/Scripts/CoinPickup.cs" />
+    <Compile Include="Assets/Scripts/ScenePersist.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets/TextMesh Pro/Shaders/TMPro.cginc" />
